add serviceId to restURL

--- a/config.cfg.example
+++ b/config.cfg.example
@@ -3,6 +3,7 @@
 # openHAB server
 openhabserver="openhab-server"
 openhabport="8080"
+serviceid="rrd4j"
 
 # InfluxDB server
 influxserver="influx-server"
