--- a/config.cfg.example
+++ b/config.cfg.example
@@ -5,7 +5,8 @@ openhabserver="alarmpi.local"
 openhabport="8080"
 serviceid="rrd4j"
 
-# InfluxDB server
+# InfluxDB server v1
+influxdb_version=1
 influxserver="influx-server"
 influxport="8086"
 influxdatbase="openhab_db"
@@ -13,3 +14,12 @@ influxuser="openhab"
 influxpw="AnotherSuperbPassword456-"
 importsize=100
 sleeptime=5
+
+# InfluxDB server v2
+influxdb_version=2
+influxserver="https://eu-central-1-1.aws.cloud1.influxdata.com"
+influxport="443"
+influx_org="Dev"
+influx_bucket="openhab"
+influx_token="AnotherSuperbPassword456-"
+importsize=30000
